# BlenderMobile

./: .gitignore  CMakeLists.txt  GNUmakefile  build_android.sh
.github/workflows/: build.yml
build_files/build_environment/cmake/: epoxy.cmake  openal.cmake
build_files/cmake/: macros.cmake
build_files/cmake/Modules/: FindAlembic.cmake  FindAudaspace.cmake  FindBlosc.cmake  FindBrotli.cmake  FindClang.cmake  FindClangTidy.cmake  FindEigen3.cmake  FindEmbree.cmake  FindEpoxy.cmake  FindFFmpeg.cmake  FindFftw3.cmake  FindGMP.cmake  FindGflags.cmake  FindGlog.cmake  FindHIP.cmake  FindHIPRT.cmake  FindHaru.cmake  FindIcuLinux.cmake  FindJack.cmake  FindJeMalloc.cmake  FindLLVM.cmake  FindLZO.cmake  FindLevelZero.cmake  FindLibEpoxy.cmake  FindMoltenVK.cmake  FindNanoVDB.cmake  FindOSL.cmake  FindOpenCOLLADA.cmake  FindOpenColorIO.cmake  FindOpenEXR.cmake  FindOpenImageDenoise.cmake  FindOpenImageIO.cmake  FindOpenJPEG.cmake  FindOpenSubdiv.cmake  FindOpenVDB.cmake  FindOptiX.cmake  FindPCRE.cmake  FindPotrace.cmake  FindPugiXML.cmake  FindPulse.cmake  (+16 more)
build_files/cmake/platform/: platform_unix.cmake
intern/: epoxy_android_stubs.h
intern/cycles/blender/: CMakeLists.txt
intern/cycles/bvh/: embree.cpp  embree.h
intern/cycles/integrator/: path_trace.cpp
intern/cycles/scene/: CMakeLists.txt
intern/cycles/util/: system.cpp
intern/ghost/: CMakeLists.txt  GHOST_C-api.h  GHOST_ISystem.hh  GHOST_IWindow.hh
intern/ghost/intern/: GHOST_C-api.cc  GHOST_ContextEGL.cc  GHOST_ISystem.cc  GHOST_SystemAndroid.cc  GHOST_SystemAndroid.hh  GHOST_SystemHeadless.hh  GHOST_Window.cc  GHOST_Window.hh  GHOST_WindowAndroid.cc  (+6 more)
intern/locale/: CMakeLists.txt
intern/opencolorio/: gpu_shader_display_transform_frag.glsl  ocio_impl_glsl.cc
intern/opensubdiv/: CMakeLists.txt
intern/openvdb/: CMakeLists.txt
source/blender/datatoc/: CMakeLists.txt
source/creator/: CMakeLists.txt
(+156 files in other folders)
